# open-brain

./: .env  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  PROJECT_INDEX.md  README.md  docker-compose.yml  install.sh  pyproject.toml
.streamlit/: config.toml
config/: settings.yaml
docs/: ADAPTER_HOST_WIRING.md  ASSERTION_LIFECYCLE_REVIEW.md  CLAUDE_CODE_ADAPTER.md  CODEX_ADAPTER.md  COMPACTION_IMPLEMENTATION_STATUS.md  HERMES_INTEGRATION_ARCHITECTURE.md  HERMES_INTEGRATION_PROGRESS.md  INSTALLATION.md  MAINTENANCE.md  MEDUSA_INTEGRATION.md  MEMORY_COMPACTION.md  PRODUCTION_DEPLOYMENT.md  PROVIDER_SDK.md  RELEASE_READINESS.md
openbrain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: check_db.py  import_sample.py  migrate.py  quickstart.sh  setup_db.py  startup.sh
src/: __init__.py  cli.py  main.py  runtime_config.py  version.py
tests/: test_agent_attribution.py  test_api_operations.py  test_assertion_consolidation.py  test_assertion_lifecycle.py  test_assertion_pruning_execution.py  test_assertion_pruning_policy.py  test_claude_adapter.py  test_cli_update.py  test_code_quality_regressions.py  test_codex_adapter.py  test_compaction_retrieval_contract.py  test_consolidation_execution.py  test_consolidation_proposals.py  test_context_feedback_scoring.py  test_context_models.py  test_context_packet_cache.py  test_context_packet_diversity.py  test_context_retrieval_optimization.py  test_context_revision_triggers.py  test_continuity_models.py  test_continuity_scopes.py  test_core.py  test_db_resilience.py  test_extended_hermes_importers.py  test_hermes_markdown_importer.py  test_hermes_plugin_install.py  test_hermes_provider_contract.py  test_host_adapters.py  (+14 more)
(+121 files in other folders)
